added html tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Hello JS Rocket
-
-<script type="text/javascript">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JS Rocket</title>
+	<script type="text/javascript">
 	console.log("hello there");
-</script>
+	</script>
+</head>
+<body>
+
+	<h1>Hello JS Rocket</h1>
+</body>
+</html>
+
